[package]
name = "cashier-wasm"
description="Cashier functionality in WebAssembly"
version = "0.1.0"
authors = ["Alen Šiljak <dev@alensiljak.eu.org>"]
license="AGPL-3.0"
edition = "2021"
repository = "https://github.com/alensiljak/cashier-wasm"
categories = ["finance"]
keywords = ["library", "finance", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.87"
wasm-bindgen-test = "0.3.37"
